--- a/css/clientes.css
+++ b/css/clientes.css
@@ -15,4 +15,11 @@
 #clientes img  {
     width: 100%;
     max-width: 280px;
+    transition: all 0.5s ease;
+}
+
+#clientes img:hover {
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.5);
+    height: 250px;
 }
